--- a/resources/game_config.json
+++ b/resources/game_config.json
@@ -1,16 +1,16 @@
 {
-	"freshkill":{
+	"freshkill": {
 		"activate_death": false,
 		"activate_events": false,
 		"start_amount": 60,
-		"auto_warrior_prey": [1,3],
-		"auto_apprentice_prey": [1,2],
+		"auto_warrior_prey": [1, 3],
+		"auto_apprentice_prey": [1, 2],
 		"condition_increase": 1,
 		"event_trigger_factor": 3.5,
 		"additional_prey": 0.5,
-		"nutrition_malnourished_percentage" : 70,
-		"nutrition_starving_percentage" : 25,
-		"prey_requirement":{
+		"nutrition_malnourished_percentage": 70,
+		"nutrition_starving_percentage": 25,
+		"prey_requirement": {
 			"leader": 3,
 			"deputy": 3,
 			"medicine cat": 2,
@@ -24,7 +24,7 @@
 			"kitten": 0.5,
 			"newborn": 0.2
 		},
-		"feeding_order":[
+		"feeding_order": [
 			"newborn",
 			"kitten",
 			"queen",
@@ -38,7 +38,11 @@
 			"deputy",
 			"leader"
 		],
-		"hunter_bonus": {"1": 1, "2": 2, "3": 3},
+		"hunter_bonus": {
+			"1": 1,
+			"2": 2,
+			"3": 3
+		},
 		"hunter_exp_bonus": {
 			"untrained": 0.1,
 			"trainee": 1,
@@ -60,8 +64,8 @@
 			"hunter_exp_bonus is the additional prey which will be added on a hunting patrol."
 		]
 	},
-	"relationship":{
-		"in_decrease_value":{
+	"relationship": {
+		"in_decrease_value": {
 			"low": 8,
 			"medium": 12,
 			"high": 16
@@ -73,19 +77,19 @@
 		"chance_for_neutral": 10,
 		"chance_of_special_group": 8,
 		"chance_romantic_not_mate": 15,
-		"comment":[
+		"comment": [
 			"chance_for_neutral - how high the chance is to make the interaction of the relationship to a 'neutral' instead of negative or positive",
 			"chance_of_special_group - 1/chance often when a group event is happening not all cats are considered, only a special group, which is defined in group_types.json",
 			"chance_romantic_not_mate - the base chance of an romantic interaction with another cat, when a cat has a mate"
 		]
 	},
-	"mates":{
+	"mates": {
 		"age_range": 40,
 		"overide_same_age_group": false,
 		"chance_fulfilled_condition": 5,
 		"chance_friends_to_lovers": 170,
 		"confession": {
-			"make_confession" : {
+			"make_confession": {
 				"romantic": 30,
 				"platonic": 15,
 				"dislike": -15,
@@ -94,7 +98,7 @@
 				"jealousy": 0,
 				"trust": 0
 			},
-			"accept_confession" : {
+			"accept_confession": {
 				"romantic": 17,
 				"platonic": 15,
 				"dislike": -10,
@@ -122,7 +126,7 @@
 			"jealousy": 0,
 			"trust": 0
 		},
-		"poly":{
+		"poly": {
 			"current_mate_condition": {
 				"romantic": 30,
 				"platonic": 0,
@@ -142,7 +146,7 @@
 				"trust": 20
 			}
 		},
-		"comment":[
+		"comment": [
 			"chance_fulfilled_condition - 1/chance of becoming mates when the conditions are fulfilled",
 			"chance_friends_to_lovers - 1/chance of becoming mates, triggers with friends_to_lover (has to be a high number because many relationships are checked each moon)",
 			"VALUES IN RELATIONSHIP DICT - 0: no condition; positive number: value has to be higher than number; negative number: value has to be lower than number",
@@ -194,7 +198,7 @@
 				"trust": 30
 			}
 		},
-		"rel_buff":{
+		"rel_buff": {
 			"new_to_clan_cat": {
 				"romantic": 0,
 				"platonic": 15,
@@ -204,7 +208,7 @@
 				"jealousy": 0,
 				"trust": 15
 			},
-			"clan_cat_to_new":{
+			"clan_cat_to_new": {
 				"romantic": 0,
 				"platonic": 15,
 				"dislike": 0,
@@ -218,16 +222,46 @@
 	},
 	"pregnancy": {
 		"birth_cooldown": 6,
-		"primary_chance_mated": 80,
+		"primary_chance_mated": 20,
 		"primary_chance_unmated": 130,
 		"random_affair_chance": 50,
 		"unmated_random_affair_chance": 10,
-		"one_kit_possibility": {"young adult": 8, "adult": 9, "senior adult": 10, "senior": 4},
-        "two_kit_possibility": {"young adult": 10, "adult": 13, "senior adult": 15, "senior": 3},
-        "three_kit_possibility": {"young adult": 17, "adult": 15, "senior adult": 5, "senior": 1},
-        "four_kit_possibility": {"young adult": 12, "adult": 8, "senior adult": 2, "senior": 0},
-        "five_kit_possibility": {"young adult": 6, "adult": 2, "senior adult": 0, "senior": 0},
-        "max_kit_possibility": {"young adult": 2, "adult": 0, "senior adult": 0, "senior": 0},
+		"one_kit_possibility": {
+			"young adult": 8,
+			"adult": 9,
+			"senior adult": 10,
+			"senior": 4
+		},
+		"two_kit_possibility": {
+			"young adult": 10,
+			"adult": 13,
+			"senior adult": 15,
+			"senior": 3
+		},
+		"three_kit_possibility": {
+			"young adult": 17,
+			"adult": 15,
+			"senior adult": 5,
+			"senior": 1
+		},
+		"four_kit_possibility": {
+			"young adult": 12,
+			"adult": 8,
+			"senior adult": 2,
+			"senior": 0
+		},
+		"five_kit_possibility": {
+			"young adult": 6,
+			"adult": 2,
+			"senior adult": 0,
+			"senior": 0
+		},
+		"max_kit_possibility": {
+			"young adult": 2,
+			"adult": 0,
+			"senior adult": 0,
+			"senior": 0
+		},
 		"min_kits": 1,
 		"max_kits": 6,
 		"comment": [
@@ -237,6 +271,12 @@
 			"As in, your max kits number should probably be 5 more than the min kits number.",
 			"But that's not required - just makes more sense that way with how the litters are generated."
 		]
+	},
+	"species_generation": {
+		"earth": 10,
+		"bird": 100,
+		"bat": 70,
+		"bug": 0
 	},
 	"cat_generation": {
 		"base_permanent_condition": 90,
@@ -288,18 +328,18 @@
 		"kitten": [1, 5],
 		"adolescent": [6, 11],
 		"young adult": [12, 47],
-        "adult": [48, 95],
-        "senior adult": [96, 119],
-        "senior": [120, 300],
+		"adult": [48, 95],
+		"senior adult": [96, 119],
+		"senior": [120, 300],
 		"comment": [
 			"These HAVE to be in the correct order: where one ends, the next one begins on the next number.",
 			"If you DON'T DO THIS, your game WILL break."
 		]
 	},
-    "cat_sprites": {
-        "sick_sprites": true,
-        "comment": "Set this to false to disable sick sprites."
-    },
+	"cat_sprites": {
+		"sick_sprites": true,
+		"comment": "Set this to false to disable sick sprites."
+	},
 	"patrol_generation": {
 		"classic_difficulty_modifier": 1,
 		"expanded_difficulty_modifier": 2.5,
@@ -337,12 +377,18 @@
 		"war_injury_modifier": 100
 	},
 	"clan_creation": {
-		"rerolls": 3,
+		"rerolls": -1,
 		"comment": "Set this to -1 for it to be infinite"
 	},
 	"graduation": {
-		"base_app_timeskip_ex": [[3, 12],[5, 6]],
-		"base_med_app_timeskip_ex": [[2, 7],[2, 3]],
+		"base_app_timeskip_ex": [
+			[3, 12],
+			[5, 6]
+		],
+		"base_med_app_timeskip_ex": [
+			[2, 7],
+			[2, 3]
+		],
 		"max_apprentice_age": {
 			"medicine cat apprentice": 30,
 			"apprentice": 25,
@@ -356,11 +402,11 @@
 	"sorting": {
 		"sort_dead_by_total_age": true,
 		"sort_rank_by_death": true,
-        "sort_by_rel_total": true,
+		"sort_by_rel_total": true,
 		"comment": [
 			"sort_dead_by_total_age - true: sort dead cats by total age (in the order they were born); false: sort dead cats by their age at the time of death.",
-            "sort_rank_by_death - true: when filtering dead cats by rank, list them in the order they died; false: when filtering dead cats by rank, sort dead cats by total age (in the order they were born).",
-            "sort_by_rel_total - true: sort a cat's relationships by the sum of their values; false: they will be sorted in the order they were added."
+			"sort_rank_by_death - true: when filtering dead cats by rank, list them in the order they died; false: when filtering dead cats by rank, sort dead cats by total age (in the order they were born).",
+			"sort_by_rel_total - true: sort a cat's relationships by the sum of their values; false: they will be sorted in the order they were added."
 		]
 	},
 	"fun": {
@@ -373,6 +419,6 @@
 		"dark_mode_background": [57, 50, 36],
 		"light_mode_background": [206, 194, 168]
 	},
-	"lock_season": false, 
+	"lock_season": false,
 	"comment": "Forces the season to be locked at the Clan's starting_season"
 }
